<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="subject_sample">计算机网络</string>
    <string name="app_name">简记作业</string>
    <string name="home">首页</string>
    <string name="day">日程</string>
    <string name="week">周记</string>
    <string name="month">学期</string>
    <string name="year">总览</string>
    <string name="setting">设置</string>
    <string name="add_projects">添加作业</string>
    <string name="set_subjects">设置课程</string>

    <string name="homework_card">作业卡片</string>

    <string-array name="week_homework_show_type">
        <item>按截止时间排序</item>
        <item>按添加时间排序</item>
        <item>按课程排序</item>
    </string-array>

    <string-array name="week_subject_show_type">
        <item>仅显示本周</item>
        <item>显示全部</item>
    </string-array>
    <string-array name="day_type">
        <item>上午</item>
        <item>下午</item>
        <item>晚上</item>
    </string-array>

    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="deadline">截止时间</string>
    <string name="set_plan">设置计划</string>
    <string name="today">今日</string>
    <string name="save">SAVE</string>
    <string name="ddl">DDL</string>
    <string name="set_clock">设置提醒</string>
    <string name="week_plan">周记</string>
    <string name="enter_new_note">Add a comment</string>
    <string name="click_to_remove">点击删除</string>
    <string name="note">备注</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
