<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/menu_first_group">
        <item
            android:icon="@drawable/ic_today_black_24px"
            android:id="@+id/day"
            android:title="@string/day"/>
        <item
            android:icon="@drawable/ic_view_week_black_24px"
            android:id="@+id/week"
            android:title="@string/week"/>
        <item
            android:icon="@drawable/ic_assignment_black_24px"
            android:id="@+id/month"
            android:title="@string/month"/>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_second_group">
        <item
            android:icon="@drawable/ic_account_circle_black_24px"
            android:id="@+id/year"
            android:title="@string/year"/>
        <item
            android:icon="@drawable/ic_settings_black_24px"
            android:id="@+id/setting"
            android:title="@string/setting" />
    </group>
</menu>